--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td><a href="register.html">userlogin user click here</a></td>
+                        <td><a href="register.html">new user click here</a></td>
                     </tr>
                 </table>
             </div>
